OpenEBTS/OpenEBTS/OpenEBTS.h

	typedef wchar_t		TCHAR;
	typedef char		TCHAR;

  typedef struct CIWVerification CIWVerification;


OPENEBTS_API int WINAPI IWGetTransactionCategories(
	CIWVerification* pIWVer,				// Verification pointer
	int nDataArraySize,						// Number of string pointers in array
	const TCHAR** rgszDataArray,			// Block of string pointers
	int* pnEntries							// Number of entries entered into array
);


//************************************************************/
//                                                            /
//							Verification					  /
//                                                            /
//************************************************************/

OPENEBTS_API int WINAPI IWGetTransactionTypes(
	CIWVerification* pIWVer,				// Verification pointer
	int nDataArraySize,						// Number of string pointers in arrays
	const TCHAR** rgszDataArray,			// Block of string pointers to TOTs
	const TCHAR** rgszDescArray,			// Block of string pointers to TOT descriptions
	int* pnEntries,							// Number of entries entered into arrays
	const TCHAR *szCategory					// Transaction category input
);


OPENEBTS_API int WINAPI IWGetRecordTypeOccurrences(
	CIWVerification* pIWVer,				// Verification pointer
	int nDataArraySize,						// Number of ints in piRecordType & piMinOccurrences & piMaxOccurrences
	int* rgnRecordType,						// Block of record types
	int* rgnMinOccurences,					// Block of minimum occurrences of a record type
	int* rgnMaxOccurences,					// Block of maximum occurrences of a record type
	int* pnEntries,							// Number of entries returned
	const TCHAR *szTOT						// TOT input
);


OPENEBTS_API int WINAPI IWGetMnemonics(
	CIWVerification* pIWVer,				// Verification pointer
	const TCHAR* szTransactionType,			// Type of transaction
	int nDataArraySize,						// Number of string pointers in arrays
	const TCHAR** rgszDataArray,			// Block of string pointers to mnemonics
	const TCHAR** rgszDescArray,			// Block of string pointers to descriptions
	int* pnEntries							// Number of entries entered into arrays
);


OPENEBTS_API int WINAPI IWGetRuleRestrictions(
	CIWVerification* pIWVer,				// Verification pointer
	const TCHAR* szTransactionType,			// Type of transaction
	const TCHAR* szMnemonic,				// Field identifier
	int* pnRecordType,						// Record type
	int* pnField,							// Field number
	int* pnSubfield,						// Subfield number
	int* pnItem,							// Item number
	const TCHAR** pszDesc,					// Description string
	const TCHAR** pszLongDesc,				// Long description
	const TCHAR** pszCharType,				// Character types allowed
	const TCHAR** pszSpecialChars,			// List of additional characters allowed
	const TCHAR** pszDateFormat,			// e.g."CCYYMMDD", or "" when not a date
	const TCHAR** pszAdvancedRule,			// e.g."greater("T2_DOA")"
	int* pnSizeMin,							// Minimum field size
	int* pnSizeMax,							// Maximum field size
	int* pnOccMin,							// Minimum number of occurrences
	int* pnOccMax,							// Maximum number of occurrences
	int* pnOffset,							// Item offset from record/field start
	int* pbAutomaticallySet,				// True if OpenEBTS handles this field
	int* pbMandatory						// True if field is mandatory, false if optional
);


OPENEBTS_API int WINAPI IWGetLocationIndex(
	CIWVerification* pIWVer,				// Verification pointer
	const TCHAR* szTransactionType,			// Type of transaction
	const TCHAR* szMnemonic,				// Field identifier
	const TCHAR** pszLocationIndex			// Location Index (returned)
);


OPENEBTS_API int WINAPI IWGetValueList(
	CIWVerification* pIWVer,				// Verification Pointer
	const TCHAR* szTransactionType,			// Type of transaction
	const TCHAR* szMnemonic,				// Field identifier
	int *pbMandatory,						// Field is mandatory
	int nDataArraySize,						// Number of string pointers in DataArray & DescArray
	const TCHAR** rgszDataArray,			// Block of string pointers
	const TCHAR** rgszDescArray,			// Block of string pointers to descriptions
	int *pnEntries							// Number of entries entered into DataArray
);


OPENEBTS_API int WINAPI IWGetValueListFilename(
	CIWVerification* pIWVer,				// Verification Pointer
	const TCHAR* szTransactionType,			// Type of transaction
	const TCHAR* szMnemonic,				// Field identifier
	const TCHAR** pszFilename				// Filename (returned)
);


OPENEBTS_API int WINAPI IWCloneVerification(
	CIWVerification *pIWVer,				// Verification pointer
	CIWVerification **ppIWVer				// Newley created verification
);


//************************************************************/
//                                                            /
//                   Image format conversion			      /
//                                                            /
//************************************************************/

OPENEBTS_API int WINAPI BMPtoRAW(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut, int *pWidth, int *pHeight, int *pDPI);

OPENEBTS_API int WINAPI RAWtoBMP(int width, int height, int DPI, int depth, BYTE* pImageIn, BYTE** ppImageOut, int *pcbOut);


OPENEBTS_API int WINAPI BMPtoWSQ(BYTE* pImageIn, int cbIn, float fRate, BYTE** ppImageOut, int *pcbOut);

OPENEBTS_API int WINAPI WSQtoBMP(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut);


OPENEBTS_API int WINAPI BMPtoJPG(BYTE* pImageIn, int cbIn, int nCompression, BYTE **ppImageOut, int *pcbOut);

OPENEBTS_API int WINAPI JPGtoBMP(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut);


OPENEBTS_API int WINAPI BMPtoJP2(BYTE* pImageIn, int cbIn, float fRate, BYTE **ppImageOut, int *pcbOut);

OPENEBTS_API int WINAPI JP2toBMP(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut);


OPENEBTS_API int WINAPI BMPtoFX4(BYTE* pImageIn, int cbIn, BYTE** ppImageOut, int *pcbOut);

OPENEBTS_API int WINAPI FX4toBMP(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut);


OPENEBTS_API int WINAPI PNGtoBMP(BYTE* pImageIn, int cbIn, BYTE **ppImageOut, int *pcbOut);

OPENEBTS_API int WINAPI BMPtoPNG(BYTE* pImageIn, int cbIn, BYTE** ppImageOut, int *pcbOut);