OpenEBTS/OpenEBTSNET/OpenEBTSInterop.cs


		/// Return Type: int
		///pIWVer: void*
		///nDataArraySize: int
		///rgszDataArray: wchar_t**
		///pnEntries: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetTransactionCategories", CharSet = CharSet.Unicode)]
		internal static extern int IWGetTransactionCategories(IntPtr pIWVer, 
			int nDataArraySize,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] str, 
			ref int pnEntries);

		/// Return Type: int
		///pIWVer: void*
		///nDataArraySize: int
		///rgszDataArray: wchar_t**
		///rgszDescArray: wchar_t**
		///pnEntries: int*
		///szCategory: wchar_t*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetTransactionTypes", CharSet = CharSet.Unicode)]
		internal static extern int IWGetTransactionTypes(IntPtr pIWVer, int nDataArraySize,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] strData,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] strDesc,
			ref int pnEntries,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szCategory);

		/// Return Type: int
		///pIWVer: void*
		///nDataArraySize: int
		///rgnRecordType: int*
		///rgnMinOccurences: int*
		///rgnMaxOccurences: int*
		///pnEntries: int*
		///szTOT: wchar_t*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetRecordTypeOccurrences", CharSet = CharSet.Unicode)]
		internal static extern int IWGetRecordTypeOccurrences(IntPtr pIWVer,
			int nDataArraySize,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.SysInt)] int[] rgnRecordType,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.SysInt)] int[] rgnMinOccurences,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.SysInt)] int[] rgnMaxOccurences,
			ref int pnEntries,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTOT);

		/// Return Type: int
		///pIWVer: void*
		///szTransactionType: wchar_t*
		///nDataArraySize: int
		///rgszDataArray: wchar_t**
		///rgszDescArray: wchar_t**
		///pnEntries: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetMnemonics", CharSet = CharSet.Unicode)]
		internal static extern int IWGetMnemonics(
			IntPtr pIWVer, [InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTransactionType,
			int nDataArraySize,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] dataArray,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] descArray,
			ref int pnEntries);

		/// Return Type: int
		///pIWVer: void*
		///szTransactionType: wchar_t*
		///szMnemonic: wchar_t*
		///pnRecordType: int*
		///pnField: int*
		///pnSubfield: int*
		///pnItem: int*
		///pszDesc: wchar_t**
		///pszLongDesc: wchar_t**
		///pszCharType: wchar_t**
		///pszSpecialChars: wchar_t**
		///pszDateFormat: wchar_t**
		///pszAdvancedRule: wchar_t**
		///pnSizeMin: int*
		///pnSizeMax: int*
		///pnOccMin: int*
		///pnOccMax: int*
		///pnOffset: int*
		///pbAutomaticallySet: int*
		///pbMandatory: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetRuleRestrictions", CharSet = CharSet.Unicode)]
		internal static extern int IWGetRuleRestrictions(
			IntPtr pIWVer,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTransactionType,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szMnemonic,
			ref int pnRecordType,
			ref int pnField,
			ref int pnSubfield,
			ref int pnItem,
			out IntPtr pszDesc,
			out IntPtr pszLongDesc,
			out IntPtr pszCharType,
			out IntPtr pszSpecialChars,
			out IntPtr pszDateFormat,
			out IntPtr pszAdvancedRule,
			ref int pnSizeMin,
			ref int pnSizeMax,
			ref int pnOccMin,
			ref int pnOccMax,
			ref int pnOffset,
			ref int pbAutomaticallySet,
			ref int pbMandatory);

		/// Return Type: int
		///pIWVer: void*
		///szTransactionType: wchar_t*
		///szMnemonic: wchar_t*
		///pszLocationIndex: wchar_t**
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetLocationIndex", CharSet = CharSet.Unicode)]
		internal static extern int IWGetLocationIndex(IntPtr pIWVer,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTransactionType,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szMnemonic,
			out IntPtr pLocationIndex);

		/// Return Type: int
		///pIWVer: void*
		///szTransactionType: wchar_t*
		///szMnemonic: wchar_t*
		///pbMandatory: int*
		///nDataArraySize: int
		///rgszDataArray: wchar_t**
		///rgszDescArray: wchar_t**
		///pnEntries: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetValueList", CharSet = CharSet.Unicode)]
		internal static extern int IWGetValueList(IntPtr pIWVer,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTransactionType,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szMnemonic,
			ref int pbMandatory,
			int nDataArraySize,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] dataArray,
			[MarshalAsAttribute(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPWStr)] IntPtr[] descArray,
			ref int pnEntries);

		/// Return Type: int
		///pIWVer: void*
		///szTransactionType: wchar_t*
		///szMnemonic: wchar_t*
		///pszFilename: wchar_t**
		[DllImport("OpenEBTS.dll", EntryPoint = "IWGetValueListFilename", CharSet = CharSet.Unicode)]
		internal static extern int IWGetValueListFilename(IntPtr pIWVer,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szTransactionType,
			[InAttribute()] [MarshalAsAttribute(UnmanagedType.LPWStr)] string szMnemonic,
			out IntPtr pfilename);

		/// Return Type: int
		///pIWVer: void*
		///ppIWVer: void**
		[DllImport("OpenEBTS.dll", EntryPoint = "IWCloneVerification", CharSet = CharSet.Unicode)]
		private static extern int IWCloneVerification(IntPtr pIWVer, ref IntPtr ppIWVer);

		#endregion Verification file related

		#region Image conversion

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		///pWidth: int*
		///pHeight: int*
		///pDPI: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoRAW")]
		internal static extern int BMPtoRAW(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut, ref int pWidth, ref int pHeight, ref int pDPI);

		/// Return Type: int
		///width: int
		///height: int
		///DPI: int
		///depth: int
		///pImageIn: unsigned char*
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "RAWtoBMP")]
		internal static extern int RAWtoBMP(int width, int height, int DPI, int depth, IntPtr pImageIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///fRate: float
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoWSQ")]
		internal static extern int BMPtoWSQ(IntPtr pImageIn, int cbIn, float fRate, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "WSQtoBMP")]
		internal static extern int WSQtoBMP(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///nCompression: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoJPG")]
		internal static extern int BMPtoJPG(IntPtr pImageIn, int cbIn, int nCompression, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "JPGtoBMP")]
		internal static extern int JPGtoBMP(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///fRate: float
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoJP2")]
		internal static extern int BMPtoJP2(IntPtr pImageIn, int cbIn, float fRate, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "JP2toBMP")]
		internal static extern int JP2toBMP(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoFX4")]
		internal static extern int BMPtoFX4(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "FX4toBMP")]
		internal static extern int FX4toBMP(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "PNGtoBMP")]
		internal static extern int PNGtoBMP(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		/// Return Type: int
		///pImageIn: unsigned char*
		///cbIn: int
		///ppImageOut: unsigned char**
		///pcbOut: int*
		[DllImport("OpenEBTS.dll", EntryPoint = "BMPtoPNG")]
		internal static extern int BMPtoPNG(IntPtr pImageIn, int cbIn, ref IntPtr ppImageOut, ref int pcbOut);

		#endregion Image conversion
	}
}
